Adding initial commit for Pokemon Project
- Mostly adding junk that will be removed later.

--- a/.gitignore
+++ b/.gitignore
@@ -21,3 +21,10 @@
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+
+*storybook.log
+storybook-static
+
+# overly bloated files
+package-lock.json
+node_modules
