--- a/frontend/package.json
+++ b/frontend/package.json
@@ -45,8 +45,11 @@
     "@storybook/preset-create-react-app": "^9.1.0",
     "@storybook/react-webpack5": "^9.1.0",
     "eslint-plugin-storybook": "^9.1.0",
+    "msw": "^1.3.3",
     "prop-types": "^15.8.1",
     "storybook": "^9.1.0",
-    "webpack": "^5.101.0"
+    "web-streams-polyfill": "^4.1.0",
+    "webpack": "^5.101.0",
+    "whatwg-fetch": "^3.6.20"
   }
 }
