--- a/frontend/package.json
+++ b/frontend/package.json
@@ -24,7 +24,8 @@
     "extends": [
       "react-app",
       "react-app/jest",
-      "plugin:storybook/recommended"
+      "plugin:storybook/recommended",
+      "prettier"
     ]
   },
   "browserslist": {
@@ -44,6 +45,7 @@
     "@storybook/addon-onboarding": "^9.1.0",
     "@storybook/preset-create-react-app": "^9.1.0",
     "@storybook/react-webpack5": "^9.1.0",
+    "eslint-config-prettier": "^10.1.8",
     "eslint-plugin-storybook": "^9.1.0",
     "msw": "^1.3.3",
     "prop-types": "^15.8.1",
