--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,7 +4,7 @@ services:
       context: ./frontend
       dockerfile: Dockerfile.frontend.dev
     ports:
-      - "3000:3000"
+      - '3000:3000'
     volumes:
       - ./frontend:/app
       - /app/node_modules
@@ -21,11 +21,12 @@ services:
       context: ./backend
       dockerfile: Dockerfile.backend.dev
     ports:
-      - "8000:8000"
+      - '8000:8000'
     volumes:
       - ./backend:/app
     environment:
       - PYTHONUNBUFFERED=1
     stdin_open: true
     tty: true
-    command: ["python", "-m", "uvicorn", "main:app", "--host", "0.0.0.0", "--port", "8000", "--reload"]
+    command:
+      ['python', '-m', 'uvicorn', 'main:app', '--host', '0.0.0.0', '--port', '8000', '--reload']
