--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,14 +3,6 @@ line-length = 100
 
 [tool.ruff]
 line-length = 100
-select = [
-    "E",
-    "W",
-    "F",
-    "I",
-    "UP", # pyupgrade
-]
-
 exclude = [
     ".git",
     "__pycache__",
@@ -18,3 +10,13 @@ exclude = [
     "dist",
     "venv"
 ]
+
+[tool.ruff.lint]
+select = [
+    "E",  # pycodestyle errors
+    "W",  # pycodestyle warnings
+    "F",  # pyflakes
+    "I",  # isort
+    "UP", # pyupgrade
+]
+
