updated .gitignore to ignore .ruff_cache/ directory

--- a/.gitignore
+++ b/.gitignore
@@ -39,3 +39,7 @@ backend/__pycache__/main.cpython-311.pyc
 .env.test.local
 .env.production.local
 *.env*
+*frontend/.env*
+
+# .ruff_cache
+.ruff_cache/
