--- a/frontend/package.json
+++ b/frontend/package.json
@@ -25,8 +25,12 @@
     "extends": [
       "react-app",
       "react-app/jest",
+      "plugin:jsx-a11y/recommended",
       "plugin:storybook/recommended",
       "prettier"
+    ],
+    "plugins": [
+      "jsx-a11y"
     ]
   },
   "browserslist": {
@@ -47,6 +51,9 @@
     "@storybook/preset-create-react-app": "^9.1.0",
     "@storybook/react-webpack5": "^9.1.0",
     "eslint-config-prettier": "^10.1.8",
+    "eslint-plugin-jsx-a11y": "^6.10.2",
+    "eslint-plugin-react": "^7.37.5",
+    "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-storybook": "^9.1.0",
     "msw": "^1.3.3",
     "prop-types": "^15.8.1",
