--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "devDependencies": {
     "@prettier/plugin-python": "^0.0.0-development",
     "husky": "^9.1.7",
+    "lint-staged": "^16.1.5",
     "prettier": "^3.6.2"
   },
   "scripts": {
@@ -10,5 +11,13 @@
     "lint:js": "npm --prefix frontend run lint",
     "lint:py": "ruff check ./backend --fix --unsafe-fixes",
     "prepare": "husky"
+  },
+  "lint-staged": {
+    "*.{js,jsx,css,md,json}": "prettier --write",
+    "frontend/src/**/*.{js,jsx}": "npm --prefix frontend run lint",
+    "backend/**/*.py": [
+      "python -m ruff check --fix --unsafe-fixes",
+      "python -m mypy"
+    ]
   }
 }
