--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -26,7 +26,14 @@ services:
       - ./backend:/app
     environment:
       - PYTHONUNBUFFERED=1
+      - REDIS_URL=redis://redis:6379
+    depends_on:
+      - redis
     stdin_open: true
     tty: true
     command:
       ['python', '-m', 'uvicorn', 'app.main:app', '--host', '0.0.0.0', '--port', '8000', '--reload']
+  redis:
+    image: redis:7-alpine
+    ports:
+      - '6379:6379'
