--- a/frontend/package.json
+++ b/frontend/package.json
@@ -48,21 +48,33 @@
     ]
   },
   "devDependencies": {
+    "@storybook/addon-actions": "^9.0.8",
+    "@storybook/addon-controls": "^9.0.8",
     "@storybook/addon-docs": "^9.1.0",
     "@storybook/addon-onboarding": "^9.1.0",
     "@storybook/preset-create-react-app": "^9.1.0",
     "@storybook/react-webpack5": "^9.1.0",
+    "@storybook/test": "^9.0.0-alpha.2",
+    "@storybook/testing-library": "^0.2.1",
     "@tanstack/react-query-devtools": "^5.45.1",
     "eslint-config-prettier": "^10.1.8",
     "eslint-plugin-jsx-a11y": "^6.10.2",
     "eslint-plugin-react": "^7.37.5",
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-storybook": "^9.1.0",
+    "expect": "^30.0.5",
+    "jest-mock": "^30.0.5",
     "msw": "^2.10.5",
+    "msw-storybook-addon": "^2.0.5",
     "prop-types": "^15.8.1",
     "storybook": "^9.1.0",
     "web-streams-polyfill": "^4.1.0",
     "webpack": "^5.101.0",
     "whatwg-fetch": "^3.6.20"
+  },
+  "msw": {
+    "workerDirectory": [
+      "public"
+    ]
   }
 }
