--- a/.gitignore
+++ b/.gitignore
@@ -1,45 +1,29 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
-# dependencies
-/node_modules
+# Dependencies
+*node_modules*
 /.pnp
 .pnp.js
 
-# testing
+# Testing
 /coverage
 
-# production
+# Production
 /build
+storybook-static
 
-# misc
-.DS_Store
-.env.local
-.env.development.local
-.env.test.local
-.env.production.local
-
+# Misc Logs & Caches
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
-
 *storybook.log
-storybook-static
-
-# overly bloated files
-*node_modules*
-
-# pycache
-__pycache__/
-backend/__pycache__/main.cpython-311.pyc
-
-
-# secrets
-.env.local
-.env.development.local
-.env.test.local
-.env.production.local
-*.env*
-frontend/.env*
-
-# .ruff_cache
+.DS_Store
 .ruff_cache/
+__pycache__/
+
+# Secrets - DO NOT COMMIT THESE
+# Ignore all .env files in any directory.
+*.env
+# Local IDE / Editor specific
+.vscode/
+.idea/
