--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,7 +7,7 @@ services:
       - '3000:3000'
     volumes:
       - ./frontend:/app
-      # - /app/node_modules
+      - /app/node_modules
       # Uncomment if you want to persist node_modules (for windows this was how it was working)
       # Was causing build issues on MacOS so I commented it out
     environment:
