Fixed stat filtering for Pokemon list with cached stats index and shared HTTP client so that I don't get rate limited. The StatFilterGroup.jsx component now manages it's local state internally with a 400ms debounce. Sliders now respond immediately to user input but only trigger API calls when the user stops dragging the slider. The StatSlider.jsx component had a bug causing an alignment issue if the user modified the slider.

--- a/package.json
+++ b/package.json
@@ -9,13 +9,13 @@
     "format": "prettier --write .",
     "lint": "npm run lint:js && npm run lint:py",
     "lint:js": "npm --prefix frontend run lint",
-    "lint:py": "ruff check ./backend --fix --unsafe-fixes",
+    "lint:py": "python3 -m ruff check ./backend --fix --unsafe-fixes",
     "prepare": "husky",
     "storybook": "npm --prefix frontend run storybook"
   },
   "lint-staged": {
     "*": "prettier --write --ignore-unknown",
     "frontend/src/**/*.{js,jsx}": "npm --prefix frontend exec -- eslint --max-warnings=0 --fix",
-    "backend/**/*.py": "python -m ruff check --fix --unsafe-fixes"
+    "backend/**/*.py": "python3 -m ruff check --fix --unsafe-fixes"
   }
 }
